<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.keronic.majestik</groupId>
  <artifactId>majestik</artifactId>
  <version>0.0.0-SNAPSHOT</version>
  <name>majestik</name>
  <url>http://www.keronic.com</url>
  <properties>
    <dependency.junit.version>5.12.1</dependency.junit.version>
    <dependency.magik-tools.version>0.10.1</dependency.magik-tools.version>
    <maven.compiler.source>23</maven.compiler.source>
    <maven.compiler.target>23</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    <sonar.java.enablePreview>true</sonar.java.enablePreview>
    <sonar.organization>krn-robin</sonar.organization>
  </properties>
  <dependencies>
    <dependency>
      <groupId>nl.ramsolutions</groupId>
      <artifactId>magik-squid</artifactId>
      <version>${dependency.magik-tools.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>${dependency.junit.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.diffplug.spotless</groupId>
          <artifactId>spotless-maven-plugin</artifactId>
          <version>2.44.3</version>
          <configuration>
            <java>
              <googleJavaFormat>
                <version>1.25.2</version>
                <style>GOOGLE</style>
              </googleJavaFormat>
            </java>
            <pom>
              <sortPom>
                <keepBlankLines>false</keepBlankLines>
                <sortDependencies>scope,groupId,artifactId</sortDependencies>
                <sortExecutions>true</sortExecutions>
                <sortModules>true</sortModules>
                <sortPlugins>scope,groupId,artifactId</sortPlugins>
                <sortProperties>true</sortProperties>
              </sortPom>
            </pom>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.4.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.14.0</version>
          <configuration>
            <compilerArgs>
              <arg>--enable-preview</arg>
            </compilerArgs>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>3.8.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.1.4</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>3.1.4</version>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.4.2</version>
          <configuration>
            <archive>
              <manifest>
                <addClasspath>true</addClasspath>
                <mainClass>com.keronic.Majestik</mainClass>
              </manifest>
            </archive>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.9.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.3.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.21.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.5.2</version>
          <configuration>
            <argLine>@{argLine} -Djava.util.logging.config.file=src/test/resources/jul.properties --enable-preview</argLine>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>io.github.download-maven-plugin</groupId>
        <artifactId>download-maven-plugin</artifactId>
        <version>2.0.0</version>
        <executions>
          <execution>
            <id>download-magik-squid</id>
            <goals>
              <goal>wget</goal>
            </goals>
            <phase>clean</phase>
            <configuration>
              <retries>3</retries>
              <skipCache>false</skipCache>
              <readTimeOut>30000</readTimeOut>
              <uri>https://github.com/StevenLooman/magik-tools/releases/download/${dependency.magik-tools.version}/magik-squid-${dependency.magik-tools.version}.jar</uri>
              <sha256>4b74d3f5204fc652a4ebb8fe2522b1cd25fecc56e063dbdfcf1e8df98f2f8986</sha256>
              <outputDirectory>${project.basedir}/libs</outputDirectory>
            </configuration>
          </execution>
          <execution>
            <id>download-magik-tools</id>
            <goals>
              <goal>wget</goal>
            </goals>
            <phase>clean</phase>
            <configuration>
              <retries>3</retries>
              <skipCache>false</skipCache>
              <readTimeOut>30000</readTimeOut>
              <uri>https://raw.githubusercontent.com/StevenLooman/magik-tools/${dependency.magik-tools.version}/pom.xml</uri>
              <outputDirectory>${project.basedir}/libs</outputDirectory>
              <sha256>b19d2799034bea4f2e2040932dff645ad20ba3a76705d72804e7ddf140e81fa5</sha256>
              <outputFileName>magik-tools-${dependency.magik-tools.version}.pom</outputFileName>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <id>copy-dependencies</id>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <includeScope>compile</includeScope>
              <outputDirectory>${project.build.directory}</outputDirectory>
              <overWriteReleases>false</overWriteReleases>
              <overWriteSnapshots>false</overWriteSnapshots>
              <overWriteIfNewer>true</overWriteIfNewer>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-install-plugin</artifactId>
        <executions>
          <execution>
            <id>install-magik-squid</id>
            <goals>
              <goal>install-file</goal>
            </goals>
            <phase>clean</phase>
            <configuration>
              <file>${project.basedir}/libs/magik-squid-${dependency.magik-tools.version}.jar</file>
              <packaging>jar</packaging>
            </configuration>
          </execution>
          <execution>
            <id>install-magik-tools</id>
            <goals>
              <goal>install-file</goal>
            </goals>
            <phase>clean</phase>
            <configuration>
              <file>${project.basedir}/libs/magik-tools-${dependency.magik-tools.version}.pom</file>
              <groupId>nl.ramsolutions</groupId>
              <artifactId>magik-tools</artifactId>
              <version>${dependency.magik-tools.version}</version>
              <packaging>pom</packaging>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.12</version>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <goals>
              <goal>report</goal>
            </goals>
            <phase>test</phase>
            <configuration>
              <formats>
                <format>XML</format>
                <format>HTML</format>
              </formats>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.sonarsource.scanner.maven</groupId>
        <artifactId>sonar-maven-plugin</artifactId>
        <version>5.1.0.4751</version>
      </plugin>
    </plugins>
  </build>
  <reporting>
    <plugins>
      <plugin>
        <groupId>com.github.spotbugs</groupId>
        <artifactId>spotbugs-maven-plugin</artifactId>
        <version>4.9.3.0</version>
        <configuration>
          <onlyAnalyze>com.keronic.*,com.keronic.majestik.-</onlyAnalyze>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>3.6.0</version>
        <configuration>
          <configLocation>google_checks.xml</configLocation>
          <sourceDirectories>
            <sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
            <sourceDirectory>${project.build.testSourceDirectory}</sourceDirectory>
          </sourceDirectories>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.11.2</version>
        <configuration>
          <additionalOptions>--enable-preview</additionalOptions>
          <doclint>all,-missing</doclint>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jxr-plugin</artifactId>
        <version>3.6.0</version>
        <configuration>
          <linkJavadoc>true</linkJavadoc>
        </configuration>
      </plugin>
    </plugins>
  </reporting>
</project>
